fix for zurb foundation reveal modal not playing nice with dropdown menus
its default z-index is too low and nice menus for example will display above it

--- a/STARTER/scss/base/_drupal.scss
+++ b/STARTER/scss/base/_drupal.scss
@@ -12,3 +12,9 @@
     margin-bottom: 0;
   }
 }
+
+// Fix Zurb Foundation Reveal Modal z-index and make it play nice with dropdown
+// menus, lightboxes, etc.
+.reveal-modal {
+  z-index: 999;
+}
